--- a/project/src/app/auth/components/register/register.component.html
+++ b/project/src/app/auth/components/register/register.component.html
@@ -15,6 +15,10 @@
     </div>
 
     <form class="auth-form" [formGroup]="form" (ngSubmit)="submit()">
+      <div *ngIf="errorMessage" class="error-message">
+        {{ errorMessage }}
+      </div>
+
       <div class="field">
         <label class="field-label" for="email">E-mail</label>
         <div class="field-input">
@@ -51,6 +55,15 @@
             placeholder="••••••••"
           />
         </div>
+        <div
+          *ngIf="
+            form.get('confirmPassword')?.touched &&
+            form.hasError('passwordMismatch')
+          "
+          class="field-error"
+        >
+          Пароли не совпадают
+        </div>
       </div>
 
       <div class="auth-actions">
@@ -64,7 +77,7 @@
 
         <div class="auth-meta">
           <span>Только для DevSecOps команды</span>
-          <a routerLink="/login" href="login">Уже есть аккаунт?</a>
+          <a routerLink="login" href="login">Уже есть аккаунт?</a>
         </div>
       </div>
     </form>
