--- a/project/src/app/auth/components/login/login.component.html
+++ b/project/src/app/auth/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="auth-wrapper">
   <div class="auth-card">
     <div class="auth-header">
-      <a routerLink="register" class="register-link">Регистрация</a>
+      <a routerLink="/register" class="register-link">Регистрация</a>
       <div class="auth-badge">
         <span class="auth-badge-dot"></span>
         Secure secret analysis
