--- a/project/src/app/dashboard/components/header/header.component.html
+++ b/project/src/app/dashboard/components/header/header.component.html
@@ -7,7 +7,7 @@
 
   <!-- Left home icon -->
   <a routerLink="dashboard" href="dashboard" class="home-icon-link">
-    <img src="/detectiveWhaleIcon.png" alt="Home" class="home-icon-image" />
+    <img src="detectiveWhaleIcon.png" alt="Home" class="home-icon-image" />
   </a>
 
   <!-- Search bar -->
