--- a/project/src/app/dashboard/components/header/header.component.html
+++ b/project/src/app/dashboard/components/header/header.component.html
@@ -6,7 +6,7 @@
   <div class="search-overlay" [class.visible]="isSearchPanelOpen"></div>
 
   <!-- Left home icon -->
-  <a routerLink="dashboard" href="dashboard" class="home-icon-link">
+  <a routerLink="/dashboard" class="home-icon-link">
     <img src="detectiveWhaleIcon.png" alt="Home" class="home-icon-image" />
   </a>
 
@@ -60,7 +60,7 @@
           <!-- Recent dashboards section -->
           <div class="search-section">
             <div class="search-section-title">Recent dashboards</div>
-            <a href="/dashboard/b2b-vitrina-predodobov" class="search-item">
+            <a routerLink="/dashboard/b2b-vitrina-predodobov" class="search-item">
               <span>B2B Витрина предодобов</span>
             </a>
           </div>
@@ -68,28 +68,28 @@
           <!-- Pages section -->
           <div class="search-section">
             <div class="search-section-title">Pages</div>
-            <a href="/dashboard" class="search-item">
+            <a routerLink="/dashboard" class="search-item">
               <span>Home</span>
             </a>
-            <a href="/bookmarks" class="search-item">
+            <a routerLink="/bookmarks" class="search-item">
               <span>Bookmarks</span>
             </a>
-            <a href="/dashboards/starred" class="search-item">
+            <a routerLink="/dashboards/starred" class="search-item">
               <span>Starred</span>
             </a>
-            <a href="/dashboards" class="search-item">
+            <a routerLink="/dashboards" class="search-item">
               <span>Dashboards</span>
             </a>
-            <a href="/explore" class="search-item">
+            <a routerLink="/explore" class="search-item">
               <span>Explore</span>
             </a>
-            <a href="/drilldown" class="search-item">
+            <a routerLink="/drilldown" class="search-item">
               <span>Drilldown</span>
             </a>
-            <a href="/admin" class="search-item">
+            <a routerLink="/admin" class="search-item">
               <span>Administration</span>
             </a>
-            <a href="/profile" class="search-item">
+            <a routerLink="/profile" class="search-item">
               <span>Игловский Михаил Александрович</span>
             </a>
           </div>
