--- a/project/src/app/dashboard/components/header/header.component.html
+++ b/project/src/app/dashboard/components/header/header.component.html
@@ -142,13 +142,13 @@
       <div class="new-panel" [class.open]="isNewPanelOpen">
         <ul class="new-panel-list">
           <li>
-            <a class="new-panel-link" href="#">Create with GitIntegration</a>
+            <a class="new-panel-link" routerLink="/under-development">Create with GitIntegration</a>
           </li>
           <li>
-            <a class="new-panel-link" href="#">Create with Code</a>
+            <a class="new-panel-link" routerLink="/under-development">Create with Code</a>
           </li>
           <li>
-            <a class="new-panel-link" href="#">Create with Json</a>
+            <a class="new-panel-link" routerLink="/under-development">Create with Json</a>
           </li>
         </ul>
       </div>
@@ -225,7 +225,7 @@
     <div #userPanel class="user-panel" [class.open]="isUserPanelOpen">
       <ul class="user-panel-list">
         <li class="current-user">
-          <a class="user-profile-link" href="#">
+          <a class="user-profile-link" routerLink="/under-development">
             <div class="user-full-name">Игловский Михаил Александрович</div>
             <div class="user-username">@m.iglovskiy</div>
           </a>
@@ -234,15 +234,15 @@
         <li class="divider"></li>
 
         <li>
-          <a class="user-panel-link" href="#">Set status</a>
+          <a class="user-panel-link" routerLink="/under-development">Set status</a>
         </li>
 
         <li>
-          <a class="user-panel-link" href="#">Edit profile</a>
+          <a class="user-panel-link" routerLink="/under-development">Edit profile</a>
         </li>
 
         <li>
-          <a class="user-panel-link" href="#">Preferences</a>
+          <a class="user-panel-link" routerLink="/under-development">Preferences</a>
         </li>
 
         <li class="divider"></li>
