--- a/project/src/app/auth/components/login/login.component.html
+++ b/project/src/app/auth/components/login/login.component.html
@@ -1,7 +1,6 @@
 <div class="auth-wrapper">
   <div class="auth-card">
     <div class="auth-header">
-      <a routerLink="/register" class="register-link">Регистрация</a>
       <div class="auth-badge">
         <span class="auth-badge-dot"></span>
         Secure secret analysis
@@ -72,7 +71,7 @@
         <div class="auth-meta">
           <span>Только для DevSecOps команды</span>
           <div class="auth-links">
-            <a href="#">Войти как гость</a>
+            <a routerLink="/register">Регистрация</a>
           </div>
         </div>
       </div>
