--- a/project/src/app/dashboard/components/header/header.component.html
+++ b/project/src/app/dashboard/components/header/header.component.html
@@ -60,7 +60,10 @@
           <!-- Recent dashboards section -->
           <div class="search-section">
             <div class="search-section-title">Recent dashboards</div>
-            <a routerLink="/dashboard/b2b-vitrina-predodobov" class="search-item">
+            <a
+              routerLink="/dashboard/b2b-vitrina-predodobov"
+              class="search-item"
+            >
               <span>B2B Витрина предодобов</span>
             </a>
           </div>
@@ -117,8 +120,13 @@
       <div class="icon-container">
         <div class="plus-icon-container">
           <svg viewBox="0 0 24 24" class="icon-plus">
-            <path d="M12 5v14M5 12h14" stroke="currentColor" stroke-width="2"
-                  stroke-linecap="round" stroke-linejoin="round" />
+            <path
+              d="M12 5v14M5 12h14"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
           </svg>
         </div>
         <svg
@@ -142,13 +150,19 @@
       <div class="new-panel" [class.open]="isNewPanelOpen">
         <ul class="new-panel-list">
           <li>
-            <a class="new-panel-link" routerLink="/under-development">Create with GitIntegration</a>
+            <a class="new-panel-link" routerLink="/under-development"
+              >Create with GitIntegration</a
+            >
           </li>
           <li>
-            <a class="new-panel-link" routerLink="/under-development">Create with Code</a>
+            <a class="new-panel-link" routerLink="/under-development"
+              >Create with Code</a
+            >
           </li>
           <li>
-            <a class="new-panel-link" routerLink="/under-development">Create with Json</a>
+            <a class="new-panel-link" routerLink="/under-development"
+              >Create with Json</a
+            >
           </li>
         </ul>
       </div>
@@ -234,7 +248,9 @@
         <li class="divider"></li>
 
         <li>
-          <a class="user-panel-link" routerLink="/under-development">Set status</a>
+          <a class="user-panel-link" routerLink="/under-development"
+            >Set status</a
+          >
         </li>
 
         <li>
@@ -242,7 +258,9 @@
         </li>
 
         <li>
-          <a class="user-panel-link" routerLink="/under-development">Preferences</a>
+          <a class="user-panel-link" routerLink="/under-development"
+            >Preferences</a
+          >
         </li>
 
         <li class="divider"></li>
