--- a/project/src/app/shared/components/under-development/under-development.component.html
+++ b/project/src/app/shared/components/under-development/under-development.component.html
@@ -28,9 +28,7 @@
       </p>
 
       <div class="actions-container">
-        <button class="secondary-button" (click)="goBack()">
-          Назад
-        </button>
+        <button class="secondary-button" (click)="goBack()">Назад</button>
         <a
           href="mailto:support@example.com?subject=Проблема с доступом к странице"
           class="support-link"
