--- a/project/src/app/auth/components/register/register.component.html
+++ b/project/src/app/auth/components/register/register.component.html
@@ -40,31 +40,69 @@
             formControlName="password"
             placeholder="••••••••"
           />
-          <button 
-            type="button" 
-            class="password-toggle" 
+          <button
+            type="button"
+            class="password-toggle"
             (click)="togglePasswordVisibility()"
-            [attr.aria-label]="showPassword ? 'Скрыть пароль' : 'Показать пароль'"
+            [attr.aria-label]="
+              showPassword ? 'Скрыть пароль' : 'Показать пароль'
+            "
           >
-            <svg class="pw-icon" viewBox="0 0 24 24" aria-hidden="true" *ngIf="!showPassword">
-              <path d="M12 5c5.5 0 9.6 4.1 11 7-1.4 2.9-5.5 7-11 7S2.4 15.9 1 12c1.4-2.9 5.5-7 11-7Zm0 3.2A3.8 3.8 0 1 0 12 16a3.8 3.8 0 0 0 0-7.6Zm0 2a1.8 1.8 0 1 1 0 3.6 1.8 1.8 0 0 1 0-3.6Z"/>
+            <svg
+              class="pw-icon"
+              viewBox="0 0 24 24"
+              aria-hidden="true"
+              *ngIf="!showPassword"
+            >
+              <path
+                d="M12 5c5.5 0 9.6 4.1 11 7-1.4 2.9-5.5 7-11 7S2.4 15.9 1 12c1.4-2.9 5.5-7 11-7Zm0 3.2A3.8 3.8 0 1 0 12 16a3.8 3.8 0 0 0 0-7.6Zm0 2a1.8 1.8 0 1 1 0 3.6 1.8 1.8 0 0 1 0-3.6Z"
+              />
             </svg>
-            <svg class="pw-icon" viewBox="0 0 24 24" aria-hidden="true" *ngIf="showPassword">
-              <path d="M12 5c5.5 0 9.6 4.1 11 7-1.4 2.9-5.5 7-11 7S2.4 15.9 1 12c1.4-2.9 5.5-7 11-7Zm0 3.2A3.8 3.8 0 1 0 12 16a3.8 3.8 0 0 0 0-7.6Zm0 2a1.8 1.8 0 1 1 0 3.6 1.8 1.8 0 0 1 0-3.6Z"/>
-              <path d="M2 2L22 22" stroke="#6b7280" stroke-width="2" stroke-linecap="round"/>
+            <svg
+              class="pw-icon"
+              viewBox="0 0 24 24"
+              aria-hidden="true"
+              *ngIf="showPassword"
+            >
+              <path
+                d="M12 5c5.5 0 9.6 4.1 11 7-1.4 2.9-5.5 7-11 7S2.4 15.9 1 12c1.4-2.9 5.5-7 11-7Zm0 3.2A3.8 3.8 0 1 0 12 16a3.8 3.8 0 0 0 0-7.6Zm0 2a1.8 1.8 0 1 1 0 3.6 1.8 1.8 0 0 1 0-3.6Z"
+              />
+              <path
+                d="M2 2L22 22"
+                stroke="#6b7280"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
             </svg>
           </button>
         </div>
         <div class="password-strength" *ngIf="form.get('password')?.value">
           <div class="strength-meter">
-            <div 
+            <div
               class="strength-bar"
-              [style.width.%]="(getPasswordStrength(form.get('password')?.value) / 4) * 100"
-              [style.background-color]="getPasswordStrengthColor(getPasswordStrength(form.get('password')?.value))"
+              [style.width.%]="
+                (getPasswordStrength(form.get('password')?.value) / 4) * 100
+              "
+              [style.background-color]="
+                getPasswordStrengthColor(
+                  getPasswordStrength(form.get('password')?.value)
+                )
+              "
             ></div>
           </div>
-          <div class="strength-text" [style.color]="getPasswordStrengthColor(getPasswordStrength(form.get('password')?.value))">
-            {{ getPasswordStrengthText(getPasswordStrength(form.get('password')?.value)) }}
+          <div
+            class="strength-text"
+            [style.color]="
+              getPasswordStrengthColor(
+                getPasswordStrength(form.get('password')?.value)
+              )
+            "
+          >
+            {{
+              getPasswordStrengthText(
+                getPasswordStrength(form.get('password')?.value)
+              )
+            }}
           </div>
         </div>
       </div>
@@ -80,18 +118,39 @@
             formControlName="confirmPassword"
             placeholder="••••••••"
           />
-          <button 
-            type="button" 
-            class="password-toggle" 
+          <button
+            type="button"
+            class="password-toggle"
             (click)="toggleConfirmPasswordVisibility()"
-            [attr.aria-label]="showConfirmPassword ? 'Скрыть пароль' : 'Показать пароль'"
+            [attr.aria-label]="
+              showConfirmPassword ? 'Скрыть пароль' : 'Показать пароль'
+            "
           >
-            <svg class="pw-icon" viewBox="0 0 24 24" aria-hidden="true" *ngIf="!showConfirmPassword">
-              <path d="M12 5c5.5 0 9.6 4.1 11 7-1.4 2.9-5.5 7-11 7S2.4 15.9 1 12c1.4-2.9 5.5-7 11-7Zm0 3.2A3.8 3.8 0 1 0 12 16a3.8 3.8 0 0 0 0-7.6Zm0 2a1.8 1.8 0 1 1 0 3.6 1.8 1.8 0 0 1 0-3.6Z"/>
+            <svg
+              class="pw-icon"
+              viewBox="0 0 24 24"
+              aria-hidden="true"
+              *ngIf="!showConfirmPassword"
+            >
+              <path
+                d="M12 5c5.5 0 9.6 4.1 11 7-1.4 2.9-5.5 7-11 7S2.4 15.9 1 12c1.4-2.9 5.5-7 11-7Zm0 3.2A3.8 3.8 0 1 0 12 16a3.8 3.8 0 0 0 0-7.6Zm0 2a1.8 1.8 0 1 1 0 3.6 1.8 1.8 0 0 1 0-3.6Z"
+              />
             </svg>
-            <svg class="pw-icon" viewBox="0 0 24 24" aria-hidden="true" *ngIf="showConfirmPassword">
-              <path d="M12 5c5.5 0 9.6 4.1 11 7-1.4 2.9-5.5 7-11 7S2.4 15.9 1 12c1.4-2.9 5.5-7 11-7Zm0 3.2A3.8 3.8 0 1 0 12 16a3.8 3.8 0 0 0 0-7.6Zm0 2a1.8 1.8 0 1 1 0 3.6 1.8 1.8 0 0 1 0-3.6Z"/>
-              <path d="M2 2L22 22" stroke="#6b7280" stroke-width="2" stroke-linecap="round"/>
+            <svg
+              class="pw-icon"
+              viewBox="0 0 24 24"
+              aria-hidden="true"
+              *ngIf="showConfirmPassword"
+            >
+              <path
+                d="M12 5c5.5 0 9.6 4.1 11 7-1.4 2.9-5.5 7-11 7S2.4 15.9 1 12c1.4-2.9 5.5-7 11-7Zm0 3.2A3.8 3.8 0 1 0 12 16a3.8 3.8 0 0 0 0-7.6Zm0 2a1.8 1.8 0 1 1 0 3.6 1.8 1.8 0 0 1 0-3.6Z"
+              />
+              <path
+                d="M2 2L22 22"
+                stroke="#6b7280"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
             </svg>
           </button>
         </div>
